ensure rays don't cause a horizontal scrollbar

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -131,6 +131,7 @@ a {
 }
 
 .page {
+	overflow: hidden;
 	position: relative;
 	&.dark {
 		background-color: #333b4a;
